--- a/src/app/pages/zapatillasad/zapatillasad.page.html
+++ b/src/app/pages/zapatillasad/zapatillasad.page.html
@@ -147,7 +147,7 @@
             Editar
             <ion-icon slot="start" name="pencil"></ion-icon>
           </ion-button>
-          <ion-button class="boton-deshabilitar">
+          <ion-button class="boton-deshabilitar" (click)="ocultar()">
             Deshabilitar
             <ion-icon slot="start" name="ban"></ion-icon>
           </ion-button>
