registro cambiado reactive form

--- a/src/app/pages/cambiarcontrasena/cambiarcontrasena.page.html
+++ b/src/app/pages/cambiarcontrasena/cambiarcontrasena.page.html
@@ -12,7 +12,7 @@
       <app-logo></app-logo>
 
       <div class="contenedor-input margin-auto">
-        <ion-input label="Nueva contraseña" label-placement="floating" fill="outline" type="text" placeholder="Ingrese su contraseña." ></ion-input>
+        <ion-input label="Nueva contraseña" label-placement="floating" fill="outline" type="password" placeholder="Ingrese su contraseña." ></ion-input>
 
         <br>
 
