--- a/src/app/pages/registrar/registrar.page.html
+++ b/src/app/pages/registrar/registrar.page.html
@@ -12,29 +12,63 @@
       <app-logo></app-logo>
 
       <div class="contenedor-input margin-auto">
-        <ion-input label="Usuario" label-placement="floating" fill="outline" type="text" placeholder="Ingrese su usuario. Ej: MarkusAce" [(ngModel)]="usuario1"></ion-input>
+        <form [formGroup]="registroForm" (ngSubmit)="validarRegistro()">
 
-        <br>
+          <ion-input formControlName="usuario1" label="Usuario" label-placement="floating" fill="outline" class="espacio" placeholder="Ingrese su usuario"></ion-input>
+          <div *ngIf="registroForm.get('usuario1')?.invalid && (registroForm.get('usuario1')?.dirty) || registroForm.get('usuario1')?.touched">
+            <p *ngIf="registroForm.get('usuario1')?.hasError('required')">El nombre de Usuario no puede estar vacio.</p>
+            <p *ngIf="registroForm.get('usuario1')?.hasError('minlength')">El usuario debe tener al menos 4 caracteres.</p>
+          </div>
 
-        <ion-input label="Email" label-placement="floating" fill="outline" type="email" placeholder="Ingrese su email. Ej: correo@gmail.com" [(ngModel)]="email1"></ion-input>
+          <ion-input formControlName="email1" label="Email" label-placement="floating" fill="outline" class="espacio" placeholder="Ingrese su email"></ion-input>
+          <div *ngIf="registroForm.get('email1')?.invalid && (registroForm.get('email1')?.dirty) || registroForm.get('email1')?.touched">
+            <p *ngIf="registroForm.get('email1')?.hasError('required')">El email no puede estar vacio </p>
+            <p *ngIf="registroForm.get('email1')?.hasError('email')">Por favor ingrese un email valido.</p>
+          </div>
 
-        <br>
+          <ion-input formControlName="rut" label="Rut" label-placement="floating" fill="outline" class="espacio" placeholder="Ingrese su rut."></ion-input>
+            <div *ngIf="registroForm.get('rut')?.invalid && registroForm.get('rut')?.dirty">
+              <p *ngIf="registroForm.get('rut')?.hasError('required')">El rut no puede estar vacio.</p>
+              <p *ngIf="registroForm.get('rut')?.hasError('rutInvalido')">Por favor ingrese un rut valido.</p>
+            </div>
 
-        <ion-input label="Contraseña" label-placement="floating" fill="outline" type="password" placeholder="Ingrese su contraseña." [(ngModel)]="contrasena1"></ion-input>
+          <ion-input formControlName="telefono" label="Telefono" label-placement="floating" fill="outline" class="espacio" type="number" placeholder="Ingrese su número de telefono"></ion-input>
+            <div *ngIf="registroForm.get('telefono')?.invalid && (registroForm.get('telefono')?.dirty || registroForm.get('telefono')?.touched)">
+              <p *ngIf="registroForm.get('telefono')?.hasError('required')">El teléfono no puede estar vacio.</p>
+              <p *ngIf="registroForm.get('telefono')?.hasError('pattern')">El teléfono debe tener entre 9 y 10 digitos.</p>
+            </div>
 
-        <br>
+            <ion-input formControlName="direccion" label="Direccion" label-placement="floating" fill="outline" class="espacio" type="number" placeholder="Ingrese su dirección"></ion-input>
+            <div *ngIf="registroForm.get('direccion')?.invalid && (registroForm.get('direccion')?.dirty || registroForm.get('direccion')?.touched)">
+              <p *ngIf="registroForm.get('direccion')?.hasError('required')">La dirección no puede estar vacia.</p>
+              <p *ngIf="registroForm.get('direccion')?.hasError('minlength')">La dirección no puede tener menos de 5 caracteres.</p>
+            </div>
 
-        <ion-input label="Repita su Contraseña" label-placement="floating" fill="outline" type="password" placeholder="Repita su contraseña." [(ngModel)]="contrasenarepetida"></ion-input>
+          <ion-input formControlName="fechanac" label="Fecha de Nacimiento" label-placement="floating" fill="outline" class="espacio" type="date" placeholder="Ingrese su fecha de nacimiento."></ion-input>
+            <div *ngIf="registroForm.get('fechanac')?.invalid && registroForm.get('fechanac')?.dirty || registroForm.get('fechanac')?.touched">
+              <p *ngIf="registroForm.get('fechanac')?.hasError('required')">La fecha de nacimiento no puede estar vacia.</p>
+              <p *ngIf="registroForm.get('fechanac')?.hasError('menorDeEdad')">No se puede registrar a un menor de 16 años.</p>
+              <p *ngIf="registroForm.get('fechanac')?.hasError('maximoEdad')">No se puede registrar a una persona con más de 130 años.</p>
+              <p *ngIf="registroForm.get('fechanac')?.hasError('fechaInvalida')">La fecha de nacimiento no puede ser en el futuro.</p>
+            </div>
 
-      </div>
+          <ion-input formControlName="contrasena1" label="Contraseña" label-placement="floating" fill="outline" class="espacio" type="password" placeholder="Ingrese su contraseña"></ion-input>
+          <div *ngIf="registroForm.get('contrasena1')?.invalid && (registroForm.get('contrasena1')?.dirty || registroForm.get('contrasena1')?.touched)">
+            <p *ngIf="registroForm.get('contrasena1')?.hasError('required')">La contraseña no puede estar vacia.</p>
+            <p *ngIf="registroForm.get('contrasena1')?.hasError('minimo')">La contraseña debe tener al menos 8 caracteres.</p>
+            <p *ngIf="registroForm.get('contrasena1')?.hasError('mayuscula')">La contraseña debe contener una mayuscula.</p>
+            <p *ngIf="registroForm.get('contrasena1')?.hasError('minuscula')">La contraseña debe contener una minuscula.</p>
+            <p *ngIf="registroForm.get('contrasena1')?.hasError('numero')">La contraseña debe contener un número.</p>
+            <p *ngIf="registroForm.get('contrasena1')?.hasError('especial')">La contraseña debe contener un caracter especial.</p>
+          </div>
 
-      <br>
+          <ion-input formControlName="contrasenarepetida" label="Repita su contraseña." label-placement="floating" fill="outline" class="espacio" type="password" placeholder="Repita su contraseña."></ion-input>
+          <div *ngIf="registroForm.hasError('mismatch') && registroForm.get('contrasenarepetida')?.dirty">
+              <p >Las contraseñas no coinciden</p>
+            </div>
 
-      <div class="contenedor-input margin-auto centrar">
-        <ion-button class="color" (click)="validarRegistro()">
-          <ion-icon slot="start" name="person-add-outline"></ion-icon>
-          Regristrar
-        </ion-button>
+          <ion-button expand="full" type="submit" [disabled]="registroForm.invalid" class="btn-color">Registrar</ion-button>
+        </form>
       </div>
 
       <br>
