--- a/src/app/pages/perfil/perfil.page.html
+++ b/src/app/pages/perfil/perfil.page.html
@@ -30,8 +30,20 @@
         <p class="negrita">&nbsp;correo&#64;gmail.com</p>
       </div>
       <div class="contenedor-flex letra-grande espacio-precio">
-        <p class="negrita2">Fecha de creación:</p>
-        <p class="negrita margin-top">&nbsp;02/09/2024</p>
+        <p class="negrita2">Rut:</p>
+        <p class="negrita margin-top">&nbsp;20.844.787-4</p>
+      </div>
+      <div class="contenedor-flex letra-grande espacio-precio">
+        <p class="negrita2">Telefono:</p>
+        <p class="negrita margin-top">&nbsp;987762514</p>
+      </div>
+      <div class="contenedor-flex letra-grande espacio-precio">
+        <p class="negrita2">Direccion:</p>
+        <p class="negrita margin-top">&nbsp;Calle 123</p>
+      </div>
+      <div class="contenedor-flex letra-grande espacio-precio">
+        <p class="negrita2">Fecha de nacimiento:</p>
+        <p class="negrita margin-top">&nbsp;21/09/2001</p>
       </div>
 
       <div class="centrar espacio-arriba">
@@ -40,6 +52,14 @@
           Cerrar sesion
         </ion-button>
       </div>
+      <div class="centrar espacio-arriba">
+        <ion-button>
+          <ion-icon slot="start" name="pencil"></ion-icon>
+          Cambiar contraseña
+        </ion-button>
+      </div>
+      
+      
     </div>
 
   </div>
