--- a/src/app/pages/perfil/perfil.page.scss
+++ b/src/app/pages/perfil/perfil.page.scss
@@ -8,8 +8,8 @@ ion-button{
 }
 
 .contenedor-perfil{
-    width: 80%;
-    height: 70%;
+    width: 90%;
+    min-height: 70%;
     background-color: black;
 }
 
@@ -50,7 +50,8 @@ ion-button{
 }
 
 .espacio-arriba{
-    padding-top: 60px;
+    padding-top: 20px;
+
 }
 
 .precio{
