--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -12,23 +12,21 @@
       <app-logo></app-logo>
 
       <div class="contenedor-input margin-auto">
-        <ion-input label="Usuario" label-placement="floating" fill="outline" type="text" placeholder="Ingrese su usuario. Ej: MarkusAce" [(ngModel)]="usuario1"></ion-input>
+        <form [formGroup]="loginForm" (ngSubmit)="validarLogin()">
 
-        <br>
+          <ion-input formControlName="usuario" label="Usuario" label-placement="floating" fill="outline" class="espacio" placeholder="Ingrese su usuario. Ej: MarkusAce"></ion-input>
+          <div *ngIf="loginForm.get('usuario')?.invalid && (loginForm.get('usuario')?.dirty) || loginForm.get('usuario')?.touched">
+            <p *ngIf="loginForm.get('usuario')?.hasError('required')">El nombre de Usuario no puede estar vacio.</p>
+          </div>
 
-        <ion-input label="Contraseña" label-placement="floating" fill="outline" type="password" placeholder="Ingrese su contraseña." [(ngModel)]="contrasena1"></ion-input>
+          <ion-input formControlName="contrasena" label="Contraseña" label-placement="floating" fill="outline" class="espacio" type="password" placeholder="Ingrese su contraseña"></ion-input>
+          <div *ngIf="loginForm.get('contrasena')?.invalid && (loginForm.get('contrasena')?.dirty || loginForm.get('contrasena')?.touched)">
+            <p *ngIf="loginForm.get('contrasena')?.hasError('required')">La contraseña no puede estar vacia.</p>
+          </div>
+
+          <ion-button expand="full" type="submit" [disabled]="loginForm.invalid" class="color"><ion-icon slot="start" name="log-in-outline"></ion-icon>Acceder</ion-button>
+        </form>
       </div>
-
-      <br>
-
-      <div class="contenedor-input margin-auto centrar">
-        <ion-button class="color" (click)="validarUsuario()">
-          <ion-icon slot="start" name="log-in-outline"></ion-icon>
-          Acceder
-        </ion-button>
-      </div>
-
-      <br>
 
       <div class="contenedor-input margin-auto">
         <div class="contenedor-flex tamano-letras" (click)="irRegistro()">
