--- a/src/app/pages/carrito/carrito.page.scss
+++ b/src/app/pages/carrito/carrito.page.scss
@@ -16,7 +16,7 @@ ion-content{
 .contenedor-cards{
     margin: auto;
     width: 80%;
-    height: 63%;
+    min-height: 63%;
     background-color: black;
 }
 
