--- a/src/app/pages/listadocompras/listadocompras.page.html
+++ b/src/app/pages/listadocompras/listadocompras.page.html
@@ -6,11 +6,59 @@
   <hr>
   <app-logo></app-logo>
   
-  <hr>
+  <app-barrabusqueda *ngIf="idRol=='3'" mensaje="Buscar Usuario..."></app-barrabusqueda>
+
+  <br>
+
+  <div *ngIf="idRol=='3'" class="contenedor-cards">
+    <hr>
+      <div class="contenedor-flex contenedor-info margin-auto espacio-precio">
+        <p class="letras-negrita tamano-letras">Usuario:</p>
+        <p class="letras-negrita2 tamano-letras color-negro">&nbsp;MarkusAce</p>
+      </div>
+      <div class="contenedor-flex contenedor-info margin-auto espacio-precio">
+        <p class="letras-negrita tamano-letras">Fecha de compra:</p>
+        <p class="letras-negrita2 tamano-letras color-negro">&nbsp;28/08/2024</p>
+      </div>
+      <div class="contenedor-flex contenedor-info margin-auto espacio-precio">
+        <p class="letras-negrita tamano-letras">Estado:</p>
+        <p class="letras-negrita2 tamano-letras color-negro">&nbsp;Pendiente</p>
+      </div>
+      <div class="margin-auto centrar"><img src="assets/zapatilla.png" alt="" class="tamano-zapatilla"></div>
+        <div class="contenedor-letras-card margin-auto">
+          <p class="letras-negrita2">RDB Game Hombre Celeste</p>
+          <p class="letras-negrita2">Puma</p>
+        </div>
+        <div class="contenedor-flex contenedor-info margin-auto espacio-precio">
+          <p class="letras-negrita tamano-letras">Talla:</p>
+          <p class="tamano-letras letras-negrita2">&nbsp;9 (27 cms)</p>
+        </div>
+        
+        <div class="contenedor-flex contenedor-info margin-auto espacio-precio">
+          <p class="letras-negrita tamano-letras">Cantidad:</p>
+          <p class="tamano-letras letras-negrita2">&nbsp; 1 Unidad</p>
+        </div>
+
+        <div class="contenedor-flex contenedor-info margin-auto espacio-precio">
+          <p class="letras-negrita tamano-letras">Dirección:</p>
+          <p class="tamano-letras letras-negrita2">&nbsp;Calle real 343</p>
+        </div>
+
+        <div class="contenedor-flex contenedor-info margin-auto espacio-precio">
+          <p class="letras-negrita tamano-letras">Llega en:</p>
+          <p class="tamano-letras letras-negrita2">&nbsp;1-3 días habiles</p>
+        </div>
+
+        <div class="contenedor-flex contenedor-info margin-auto espacio-precio">
+          <p class="letras-negrita tamano-letras">Total:</p>
+          <p class="tamano-letras letras-negrita2">&nbsp;$33.590</p>
+        </div>
+        
+  </div>
     
   <hr>
 
-  <div class="contenedor-cards">
+  <div *ngIf="idRol=='2'" class="contenedor-cards">
     <hr>
       <div class="contenedor-flex contenedor-info margin-auto centrar-justify">
         <p class="letras-negrita tamano-letras">Fecha de compra:</p>
@@ -44,10 +92,9 @@
         <div class="contenedor-flex contenedor-info margin-auto espacio-precio">
           <p class="letras-negrita tamano-letras">Total:</p>
           <p class="tamano-letras letras-negrita2">&nbsp;$33.590</p>
-        </div>
-        
-    
+        </div>  
   </div>
+  <br>
 
 </ion-content>
 
