--- a/src/app/pages/listadocompras/listadocompras.page.scss
+++ b/src/app/pages/listadocompras/listadocompras.page.scss
@@ -5,7 +5,7 @@ ion-content{
 .contenedor-cards{
     margin: auto;
     width: 80%;
-    height: 72%;
+    min-height: 72%;
     background-color: black;
     border-radius: 10px;
 }
