--- a/src/app/pages/zapatillas/zapatillas.page.html
+++ b/src/app/pages/zapatillas/zapatillas.page.html
@@ -60,10 +60,10 @@
 </ion-menu>
 
 <ion-header id="menuFiltro">
-  <app-barranav titulo="Zapatillas"></app-barranav>
+  <app-barranav titulo="Zapatillas {{ idRol }}" [tipousuario]="idRol"></app-barranav>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" class="ion-padding">
   <hr>
   
   <app-logo></app-logo>
@@ -85,24 +85,26 @@
   </div>
   <hr>
 
-  <div class="contenedor-cards" (click)="irProducto()">
-    <div>
-      <div class="margin-auto centrar"><img src="assets/zapatilla.png" alt="" class="tamano-zapatilla margin-top"></div>
-        <div class="contenedor-letras-card margin-auto">
-          <p class="letras-negrita2">RDB Game Hombre Celeste</p>
-          <p class="letras-negrita2">Puma</p>
-        </div>
-        <hr>
-        <div class="centrar tamano-letras letras-negrita">
-          <p class="letras-negrita2">$33.590</p>
-        </div>
+  <!-- botones admin -->
+  <div *ngIf="idRol=='3'" class=" ancho margin-auto">
+    <div class="contenedor-botones margin-auto contenedor-flex">
+      <ion-button class="boton-agregar" (click)="irAgregarZapa()">
+        Agregar zapatilla
+        <ion-icon slot="start" name="add"></ion-icon>
+      </ion-button>
+
+      <ion-button class="boton-agregar" (click)="irAgregarMarca()">
+        Agregar marca
+        <ion-icon slot="start" name="add"></ion-icon>
+      </ion-button>
     </div>
+
   </div>
 
   <hr>
 
-  <div class="contenedor-cards" (click)="irProducto()">
-    <div>
+  <div class="contenedor-cards">
+    <div (click)="irProducto()">
       <div class="margin-auto centrar"><img src="assets/zapatilla.png" alt="" class="tamano-zapatilla margin-top"></div>
         <div class="contenedor-letras-card margin-auto">
           <p class="letras-negrita2">RDB Game Hombre Celeste</p>
@@ -112,7 +114,18 @@
         <div class="centrar tamano-letras letras-negrita">
           <p class="letras-negrita2">$33.590</p>
         </div>
-    </div>
+      </div>
+        <div *ngIf="idRol=='3'" class="contenedor-botones margin-auto contenedor-flex espacio-precio">
+          <ion-button class="boton-editar" (click)="irEditar()">
+            Editar
+            <ion-icon slot="start" name="pencil"></ion-icon>
+          </ion-button>
+          <ion-button class="boton-deshabilitar">
+            Deshabilitar
+            <ion-icon slot="start" name="ban"></ion-icon>
+          </ion-button>
+        </div>
+    <br>
   </div>
 
   <hr>
@@ -120,5 +133,5 @@
 </ion-content>
 
 <ion-footer>
-  <app-barrafooter></app-barrafooter>
+  <app-barrafooter [tipoUsuario]="idRol"></app-barrafooter>
 </ion-footer>
