--- a/src/app/pages/zapatillas/zapatillas.page.scss
+++ b/src/app/pages/zapatillas/zapatillas.page.scss
@@ -13,6 +13,20 @@ ion-title{
     opacity: 0.7;
 }
 
+.boton-agregar{
+    --background: black;
+    width: 50%;
+    font-size: 13px;
+    color: white;
+}
+
+.boton-editar{
+    --background: #F44449;
+}
+.boton-deshabilitar{
+    --background: #F44449;
+}
+
 .margin-auto{
     margin: auto;
 }
@@ -41,29 +55,6 @@ ion-title{
     margin-bottom: 15px;
 }
 
-.cuadrado-busqueda{
-    width: 90%;
-    height: 60px;
-    background-color: #B5B5B5;
-    border-radius: 10px;
-}
-
-.barra-busqueda{
-    height: 100%;
-    width: 90%;
-    background-color: #B5B5B5;
-    color: white;
-    border: none;
-    outline: none;
-    border-radius: 10px;
-    margin-left: 2px;
-    font-weight: 500;
-
-}
-.barra-busqueda::placeholder{
-    color: white;
-    opacity: 0.9;
-}
 .tamano-lupa{
     width: 12%;
     height: 65%;
@@ -73,11 +64,11 @@ ion-title{
 .contenedor-cards{
     margin: auto;
     width: 80%;
-    height: 45%;
+    min-height: 53%;
     background-color: black;
     border-radius: 10px;
-    
 }
+
 .tamano-zapatilla{
     width: 85%;
     height: 85%;
@@ -94,30 +85,55 @@ ion-title{
     max-width: 40px;
     max-height: 40px;
 }
+
 .letras-negrita{
     font-weight: bold;
 }
+
 .letras-negrita2{
     font-weight: 500;
 }
+
 .arreglar-lista{
     margin-top: 3px;
 }
+
 .color-negro{
     color:black;
 }
+
 .margin-top{
     margin-top: 10px;
 }
+
 .contenedor-botones{
     width: 90%;
 }
+
 .tamano-letras{
     font-size: 25px;
 }
+
 .contenedor-letras-card{
     width: 80%;
     font-size: 18px;
+}
+
+.ancho{
+    width: 100%;
+}
+
+.precio{
+    text-align: right;
+}
+
+.espacio-precio{
+    justify-content: space-between;
+    align-items: center;
+}
+
+.negrita{
+    font-weight: 600;
 }
 
 .boton-filtro{
