--- a/src/app/pages/cambiarcontrasena/cambiarcontrasena.page.html
+++ b/src/app/pages/cambiarcontrasena/cambiarcontrasena.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
 
-  <app-barranav titulo="Cambiar contraseña"></app-barranav>
+  <app-barranav titulo="Cambiar contraseña" [tipousuario]="idRol"></app-barranav>
 
 </ion-header>
 
@@ -37,6 +37,6 @@
 
 <ion-footer>
 
-  <app-barrafooter></app-barrafooter>
+  <app-barrafooter [tipoUsuario]="idRol"></app-barrafooter>
   
 </ion-footer>
