--- a/src/app/pages/carrito/carrito.page.html
+++ b/src/app/pages/carrito/carrito.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   
-  <app-barranav titulo="Carrito"></app-barranav>
+  <app-barranav titulo="Carrito" [tipousuario]="idRol"></app-barranav>
 
 </ion-header>
 
@@ -104,6 +104,6 @@
 
 <ion-footer>
 
-  <app-barrafooter></app-barrafooter>
+  <app-barrafooter [tipoUsuario]="idRol"></app-barrafooter>
   
 </ion-footer>
