--- a/src/app/pages/listacomprasad/listacomprasad.page.html
+++ b/src/app/pages/listacomprasad/listacomprasad.page.html
@@ -63,6 +63,6 @@
 
 <ion-footer>
   
-  <app-barrafooter></app-barrafooter>
+  <app-barrafooter [tipoUsuario]="idRol"></app-barrafooter>
 
 </ion-footer>
