--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
 
-  <app-barranav titulo="Inicio de sesión"></app-barranav>
+  <app-barranav titulo="Inicio de sesión" [tipousuario]="idRol"></app-barranav>
 
 </ion-header>
 
@@ -43,6 +43,6 @@
 
 <ion-footer>
 
-  <app-barrafooter></app-barrafooter>
+  <app-barrafooter [tipoUsuario]="idRol"></app-barrafooter>
   
 </ion-footer>
