--- a/src/app/pages/producto/producto.page.html
+++ b/src/app/pages/producto/producto.page.html
@@ -1,6 +1,6 @@
 <ion-header >
   
-  <app-barranav titulo="Producto"></app-barranav>
+  <app-barranav titulo="Producto" [tipousuario]="idRol"></app-barranav>
 
 </ion-header>
 
@@ -76,6 +76,6 @@
 
 <ion-footer>
   
-  <app-barrafooter></app-barrafooter>
+  <app-barrafooter [tipoUsuario]="idRol"></app-barrafooter>
 
 </ion-footer>
