--- a/src/app/pages/registrar/registrar.page.scss
+++ b/src/app/pages/registrar/registrar.page.scss
@@ -68,3 +68,9 @@ ion-input{
     --background: black;
     color: white;
 }
+.color-negro{
+    color: black;
+}
+.negrita{
+    font-weight: 500;
+}
